--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <button type="button" id="preview-update" class="btn secondary">Update preview</button>
               <button type="button" id="reset-btn" class="btn ghost">Reset</button>
               <button type="button" onclick="saveResume()">💾 Save Resume</button>
-              <button type="button" onclick="loadResume()">📂 Load Resume</button>
+              <button type="button" onclick="loadSelectedResume()">📂 Load Selected</button>
             </div>
           </form>
         </div>
