--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <strong>Fill in details</strong>
               <div class="muted">Quick, focused prompts — add multiple experience / education entries as needed.</div>
             </div>
-            <div class="muted">Local (client-side) — PDF generated in your browser</div>
+            <div class="muted">Local (client-side) — PDF generated in your browser, no data stored online</div>
           </div>
 
           <form id="resume-form">
