--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </div>
               
           </form>
-        </div>
+        //</div>
 
         <div style="margin-top:12px" class="muted-block">
           <div style="display:flex;justify-content:space-between;align-items:center">
