--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </div>
               
           </form>
-        //</div>
+          
 
         <div style="margin-top:12px" class="muted-block">
           <div style="display:flex;justify-content:space-between;align-items:center">
@@ -552,7 +552,7 @@ populateResumeDropdown();
 </style>
 
   <a href="mailto:hightekkrednek@gmail.com?subject=Resume%20Builder" class="email-button">
-    Email Me
+    Email Me v1
 </a>
 
 
