--- a/index.html
+++ b/index.html
@@ -534,7 +534,30 @@ populateResumeDropdown();
     
   </script>
 
+<a href="mailto:hightekkrednek@gmail.com?subject=Resume%20Builder" id="emailButton">
+    Email Me
+</a>
 
+<style>
+#emailButton {
+    align: center;
+    display: inline-block;
+    background-color: #28a745; /* same green as your Generate PDF */
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+#emailButton:hover {
+    background-color: #218838; /* darker green hover */
+}
+</style>
 
 </body>
 </html>
