--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
     </div>
 
 <div style="background:#f0f2f5;padding:6px;text-align:center;font-size:12px;color:#555;border-radius:6px;margin-top:20px;">
-  Built by Dennis Nuckols
+  Built by Dennis Nuckols - 
+  <a href="mailto:hightekkrednek@gmail.com?subject=Resume%20Builder" id="emailButton">
+    Email Me
+</a>
   
 </div>
 
@@ -534,13 +537,10 @@ populateResumeDropdown();
     
   </script>
 
-<a href="mailto:hightekkrednek@gmail.com?subject=Resume%20Builder" id="emailButton">
-    Email Me
-</a>
+
 
 <style>
 #emailButton {
-    align: center;
     display: inline-block;
     background-color: #28a745; /* same green as your Generate PDF */
     color: white;
